--- a/_includes/header-post.html
+++ b/_includes/header-post.html
@@ -9,12 +9,6 @@
     <!-- Bootstrap Core CSS -->
     <link href="../../../../../css/bootstrap.min.css" rel="stylesheet" type="text/css">
 
-    <style>
-      body {
-        padding-top: 100px;
-      }
-    </style>
-
     <!-- Fonts -->
     <link href="../../../../../font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 	  <link href="../../../../../css/animate.css" rel="stylesheet" />
@@ -25,31 +19,24 @@
   </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-custom">
-    <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-custom navbar-fixed-top" role="navigation" style="background: #000; padding: 1px 0;">
         <div class="container">
             <div class="navbar-header page-scroll">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="index.html">
-                    <h1>Get Mastered</h1>
+                <a class="navbar-brand" href="/blog">
+                    <h1 style="color:#84E8E1">Get Mastered<span style="color:#fff; font-size: 12px; text-transform: lowercase;"> The DIY Mastering Blog</span></h1>
                 </a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-    <li><a href="#service">Free Master</a></li>
-    <li><a href="#contact">Contact</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">More<b class="caret"></b></a>
-          <ul class="dropdown-menu">
-            <li><a href="payment.html">Payment</a></li>
-<!--             <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Example menu</a></li> -->
-          </ul>
-        </li>
+        <li class="active"><a href="/index.html">Home</a></li>
+        <li><a href="/#service">Free Master</a></li>
+        <li><a href="/#contact">Contact</a></li>
+        <li><a href="/blog">Blog</a></li>
       </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -57,5 +44,6 @@
         <!-- /.container -->
     </nav>
 
+<section class="bg-white">
     <div class="container">
 
