--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,3 +1,8 @@
+<!DOCTYPE html>
+
+<body>
+<div>
+	<section class="bg-gray" style="padding: 20px; padding-top: 100px;">
 <h3>What is Get Mastered?</h3>
 
 <p>Get Mastered is an instructional blog striving to teach audio engineers
@@ -23,3 +28,8 @@ such as recording, mixing, and songwriting. Indulge me.</p>
     <li><a href="{{ post.url }}">{{ post.title }}</a></li>
   {% endfor %}
 </ul>
+
+</section>
+</div>
+</body>
+</html>
