--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,16 +1,16 @@
-{% include header_post.html %}
+{% include header-post.html %}
 
 <div class="row-fluid">
-  <div class="col-lg-8">
-    <h1>{{ page.title }}</h1>
+  <div class="col-lg-10" style="padding-top: 100px;">
+    <h1 style="color:#000">{{ page.title }}</h1>
     <p class="muted">{{ page.date | date_to_long_string }}</p>
 
     {{ content }}
   </div>
-  <div class="col-lg-4">
-    {% include sidebar.html %}
+  <div class="col-lg-2">
+    {% include sidebar-post.html %}
   </div>
 </div>
 
-{% include footer.html %}
+{% include footer-post.html %}
 
