--- a/_includes/sidebar-post.html
+++ b/_includes/sidebar-post.html
@@ -6,7 +6,7 @@
 <h3>Archive:</h3>
 
 <ul>
-  {% for post in site.posts limit: 5 %}
+  {% for post in site.posts %}
     <li><a href="{{ post.url }}">{{ post.title }}</a></li>
   {% endfor %}
 </ul>
