--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,10 +33,9 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="/index.html">Home</a></li>
-        <li><a href="/#service">Free Master</a></li>
-        <li><a href="/#contact">Contact</a></li>
+        <li class="active"><a href="/#intro">Home</a></li>
         <li><a href="/blog">Blog</a></li>
+        <li><a href="http://whoisyohannes.com">My Music</a></li>
       </ul>
             </div>
             <!-- /.navbar-collapse -->
