--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 {% include header.html %}
 
 <div class="row-fluid">
-  <div class="col-lg-8" style="padding-top: 100px;">
+  <div class="col-lg-8" style="padding-top: 100px; padding-right: 1px;">
     {{ content }}
   </div>
   <div class="col-lg-4">
@@ -10,4 +10,5 @@
 </div>
 
 {% include footer.html %}
+
 
