--- a/css/style.css
+++ b/css/style.css
@@ -775,6 +775,9 @@ Parallax
 
 @media (max-width:480px) {
 
+h1{
+  font-size: 10px;
+}
 	.navbar-custom .nav.navbar-nav {
     background-color: rgba(255,255,255,.4);
 	}
