--- a/css/style.css
+++ b/css/style.css
@@ -775,8 +775,11 @@ Parallax
 
 @media (max-width:480px) {
 
-h1{
-  font-size: 10px;
+h1,
+h2,
+h3,
+{
+  font-size: 2px;
 }
 	.navbar-custom .nav.navbar-nav {
     background-color: rgba(255,255,255,.4);
