--- a/css/style.css
+++ b/css/style.css
@@ -778,8 +778,15 @@ Parallax
 h1,
 h2,
 h3,
-{
-  font-size: 2px;
+h4,
+h5,
+h6 {
+    margin: 0 0 30px;
+    text-transform: uppercase;
+    font-family: Montserrat,sans-serif;
+    font-weight: 200;
+    letter-spacing: 1px;
+    font-size: 10px;
 }
 	.navbar-custom .nav.navbar-nav {
     background-color: rgba(255,255,255,.4);
