--- a/css/style.css
+++ b/css/style.css
@@ -762,6 +762,21 @@ Parallax
 }
 @media (max-width:768px) {
 	
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin: 0 0 30px;
+    text-transform: uppercase;
+    font-family: Montserrat,sans-serif;
+    font-weight: 200;
+    letter-spacing: 1px;
+    font-size: 10px;
+}
+
+  
 	.team.boxed-grey {
 		margin-bottom: 30px;
 	}
