--- a/css/style.css
+++ b/css/style.css
@@ -761,22 +761,8 @@ Parallax
 
 }
 @media (max-width:768px) {
-	
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    margin: 0 0 30px;
-    text-transform: uppercase;
-    font-family: Montserrat,sans-serif;
-    font-weight: 200;
-    letter-spacing: 1px;
-    font-size: 10px;
-}
 
-  
+
 	.team.boxed-grey {
 		margin-bottom: 30px;
 	}
@@ -790,19 +776,10 @@ h6 {
 
 @media (max-width:480px) {
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    margin: 0 0 30px;
-    text-transform: uppercase;
-    font-family: Montserrat,sans-serif;
-    font-weight: 200;
-    letter-spacing: 1px;
-    font-size: 10px;
+.section-heading h2 {
+  font-size: 5px;
 }
+
 	.navbar-custom .nav.navbar-nav {
     background-color: rgba(255,255,255,.4);
 	}
