--- a/css/style.css
+++ b/css/style.css
@@ -803,7 +803,7 @@ Parallax
 }
 
 	.navbar-custom .nav.navbar-nav {
-    background-color: rgba(255,255,255,.4);
+    background-color: rgba(255,255,255,1);
 	}
 	
 	.navbar.navbar-custom.navbar-fixed-top {
