--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ a:focus {
 
 .navbar {
     margin-bottom: 0;
-    border-bottom: 1px solid rgba(255,255,255,1);	
+    border-bottom: 1px solid rgba(255,255,255,.3);	
 }
 
 .navbar-brand {
@@ -83,7 +83,7 @@ a:focus {
 }
 
 .nav.navbar-nav {
-    background-color: rgba(255,255,255,0);
+    background-color: rgba(255,255,255,1);
 }
 
 .navbar-custom.top-nav-collapse .nav.navbar-nav {
