--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,7 @@ a:focus {
     padding: 4px 6px;
     font-size: 14px;
     /*color: #fff;*/
-    color: rgba(0,0,0,1);
+    color: #000;
 }
 
 .navbar-toggle:focus,
