--- a/css/style.css
+++ b/css/style.css
@@ -157,8 +157,7 @@ a:focus {
 .navbar-toggle {
     padding: 4px 6px;
     font-size: 14px;
-    /*color: #fff;*/
-    color: #000;
+    color: #fff;
 }
 
 .navbar-toggle:focus,
@@ -776,6 +775,26 @@ Parallax
 }
 
 @media (max-width:480px) {
+
+    .navbar {
+        padding: 20px 0;
+        border-bottom: 0;
+        letter-spacing: 1px;
+        background: 0 0;
+        -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
+        -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
+        transition: background .5s ease-in-out,padding .5s ease-in-out;
+    }
+
+    .top-nav-collapse {
+        padding: 0;
+        background-color: #000;
+    }
+
+    .navbar-custom.top-nav-collapse {
+        border-bottom: 1px solid rgba(0,0,0,.3);
+    }
+  
 
 .navbar-brand {
     font-weight: 700;
