--- a/css/style.css
+++ b/css/style.css
@@ -311,6 +311,7 @@ hr {
 
 .intro {
 	width:100%;
+  height: 100%;
 	position:relative;
 	
 	background: url(../img/bg1.jpg) no-repeat top center;
@@ -814,8 +815,8 @@ Parallax
 
 .intro .slogan h2 {
   font-size: 40px;
-  line-height: 10px
-  font-weight: 200;
+  line-height: 0px
+  font-weight: 700;
 }
 
 .intro .slogan h4 {
