--- a/css/style.css
+++ b/css/style.css
@@ -317,8 +317,8 @@ hr {
 }
 
 #intro.intro {
-	padding: 50% 0 0 0;
-  padding-top: -100px;
+	padding: 20% 0 0 0;
+  /*padding-top: -100px;*/
 }
 
 .intro .slogan {
