--- a/css/style.css
+++ b/css/style.css
@@ -818,17 +818,19 @@ width:100%;
 position:relative;
 background: url(../img/bg1.jpg) no-repeat; 
 /*top center;*/
-background-position: 0px -140px;
+background-position: 0px -200px;
 }
 
 .intro .slogan h2 {
   font-size: 40px;
   line-height: 0px
   font-weight: 700;
+  text-align: center;
 }
 
 .intro .slogan h4 {
   font-size: 15px;
+  color: rgba(0,0,0,0);
 }
 
 	.navbar-custom .nav.navbar-nav {
