line height 0px

--- a/css/style.css
+++ b/css/style.css
@@ -811,7 +811,6 @@ Parallax
   color: rgba(0,0,0,0);
   font-size: 18px;
   line-height: 30px;
-  text-align: center;
 }
 
 .intro {
@@ -831,6 +830,7 @@ background-position: 0px -160px;
 
 .intro .slogan h4 {
   font-size: 15px;
+  line-height: 0px
 }
 
 	.navbar-custom .nav.navbar-nav {
