--- a/css/style.css
+++ b/css/style.css
@@ -817,7 +817,9 @@ Parallax
 	width:100%;
 	height:100%;
 	position:relative;
+  background-image: none;
 	background-color: #000000;
+
 }
 
 .intro .slogan h2 {
