--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,7 +2,7 @@
 
 <body>
 <div>
-	<section class="bg-gray" style="padding: 30px; padding-top: 100px; padding-bottom: 500px; bottom = 0px;">
+	<section class="bg-gray" style="padding: 30px; padding-top: 100px;">
 <h3>What is Get Mastered?</h3>
 
 <p>Get Mastered is an instructional blog striving to teach audio engineers
