--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,14 +7,14 @@
     <meta name="description" content="{{ site.description }}">
 
     <!-- Bootstrap Core CSS -->
-    <link href="../../css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 
     <!-- Fonts -->
-    <link href="../../font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-	  <link href="../../css/animate.css" rel="stylesheet" />
+    <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+      <link href="/css/animate.css" rel="stylesheet" />
     <!-- Squad theme CSS -->
-    <link href="../../css/style.css" rel="stylesheet">
-	  <link href="../../color/default.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet">
+      <link href="/color/default.css" rel="stylesheet">
 
   </head>
 
@@ -26,7 +26,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand" href="/blog">
-                    <h1 style="color:#84E8E1">Get Mastered<span style="color:#fff; font-size: 12px; text-transform: lowercase;"> The DIY Mastering Blog</span></h1>
+                    <h1>Get Mastered</h1><h2> The DIY Mastering Blog</h2>
                 </a>
             </div>
 
@@ -35,6 +35,7 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="/#intro">Home</a></li>
         <li><a href="/blog">Blog</a></li>
+        <li><a href="/#contact">Contact</a></li>
         <li><a href="http://whoisyohannes.com">My Music</a></li>
       </ul>
             </div>
