--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@
 <div class="row-fluid">
   <div class="col-lg-10" style="padding-top: 100px;">
     <h1 style="color:#000">{{ page.title }}</h1>
-    <p class="muted">{{ page.date | date_to_long_string }}</p>
+    <p class="muted"><i>{{ page.date | date_to_long_string }}</i></p>
 
     {{ content }}
   </div>
