--- a/_includes/header-post.html
+++ b/_includes/header-post.html
@@ -20,19 +20,19 @@
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-custom">
     <nav class="navbar navbar-custom navbar-fixed-top" role="navigation" style="background: #000; padding: 1px 0;">
-        <div class="container">
+        <div class="container-fluid">
             <div class="navbar-header page-scroll">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="/blog">
+                <a class="navbar-brand" href="/blog" style="padding-left: 33px;">
                     <h1>Get Mastered</h1><h2> The DIY Mastering Blog</h2>
                 </a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
-      <ul class="nav navbar-nav">
+      <ul class="nav navbar-nav" style="padding-right: 30px;">
         <li class="active"><a href="/#intro">Home</a></li>
         <li><a href="/blog">Blog</a></li>
         <li><a href="/#contact">Contact</a></li>
@@ -45,5 +45,4 @@
     </nav>
 
 <section class="bg-white">
-    <div class="container">
 
