--- a/_includes/sidebar-post.html
+++ b/_includes/sidebar-post.html
@@ -2,14 +2,15 @@
 
 <body>
 <div>
-	<section class="bg-white" style="padding: 20px; padding-top: 100px;">
-<h3>Archive:</h3>
+	<section style="padding: 30px; padding-top: 90px;">
 
-<ul>
+<h3 style="color: #000000; text-align: justify;
+    text-justify: inter-word;">
+    Archive:</h3>
   {% for post in site.posts %}
-    <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+    <a href="{{ post.url }}" style="text-align: justify;
+    text-justify: inter-word;">{{ post.title }}</a><br>
   {% endfor %}
-</ul>
 
 </section>
 </div>
