--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,7 +21,10 @@
   <div class="col-lg-3">
 
   </div>
-  <div class="col-lg-9" style="padding: 30px 120px 20px 0px;">
+  <div class="col-lg-4">
+
+  </div>
+  <div class="col-lg-5" style="padding: 20px 50px 40px 0px;">
 		{% include mailing-list-signup.html %}
   </div>
 
