--- a/_includes/mailing-list-signup.html
+++ b/_includes/mailing-list-signup.html
@@ -7,20 +7,19 @@
 	<h4 style="font-size: 27px; color: #84E8E1; text-align: right;">Sign up for the mailing list:</h4>
 	<div id="mc_embed_signup_scroll">
                 <div class="container-fluid">
-                    <div class="row">
-                        <div class="form-group">
-                            <textarea class="required email" name="EMAIL" id="mce-EMAIL" class="form-control" rows="1" cols="100" required="required"
-                                placeholder="youremail@something.com"></textarea>
-                    </div>
-                    <div id="mce-responses" class="clear">
-		<div class="response" id="mce-error-response" style="display:none"></div>
-		<div class="response" id="mce-success-response" style="display:none"></div>
-	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                        <button type="submit" name="subscribe" class="btn btn-skin pull-right bg-dark" value="Subscribe" id="mc-embedded-subscribe" >
-                            Sign Up</button>
+                    	<div class="row">
+                        	<div class="form-group">
+                        	    <textarea class="required email" name="EMAIL" id="mce-EMAIL" class="form-control" rows="1" cols="100" required="required"
+                        	        placeholder="youremail@something.com"></textarea>
+                    		</div>
+                    		<div id="mce-responses" class="clear">
+					<div class="response" id="mce-error-response" style="display:none"></div>
+					<div class="response" id="mce-success-response" style="display:none"></div>
+				</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                        	<button type="submit" name="subscribe" class="btn btn-skin pull-right bg-dark" value="Subscribe" id="mc-embedded-subscribe">Sign Up</button>
 
-                </div>
-        </div>
+                	 </div>
+        	</div>
         </div>
 </form>
 </div>
