class="required email"

--- a/_includes/mailing-list-signup.html
+++ b/_includes/mailing-list-signup.html
@@ -9,7 +9,7 @@
                 <div class="container-fluid">
                     	<div class="row">
                         	<div class="form-group">
-                        	    <textarea class="required email" name="EMAIL" id="mce-EMAIL" rows="1" cols="100" required="required" placeholder="youremail@something.com"></textarea>
+                        	    <textarea class="form-control" name="EMAIL" id="mce-EMAIL" rows="1" cols="100" required="required" placeholder="youremail@something.com"></textarea>
                     		</div>
                     		<div id="mce-responses" class="clear">
 					<div class="response" id="mce-error-response" style="display:none"></div>
