--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -3,8 +3,7 @@
 <body>
 <div>
 	<section style="padding: 20px; padding-top: 90px;">
-<h3 style="color: #000000; text-align: justify;
-    text-justify: inter-word; ">
+<h3 style="color: #000000;">
     What is Get Mastered?
 </h3>
 
@@ -17,8 +16,7 @@ interactive tutorials.<br>
 Though the blog is focused on mastering, ocassionally I will delve into related topics,
 such as recording, mixing, and songwriting. Indulge me.</p>
 
-<h3 style="color: #000000; text-align: justify;
-    text-justify: inter-word;">
+<h3 style="color: #000000;">
     Who Am I?</h3>
 
 <p style="text-align: justify;
@@ -32,7 +30,7 @@ My name is Keenan, and I'm a recording hobbyist and <span><a href="http://whoisy
 
 
 
-<h3 style="color: #000000;">What's New?</h3>
+<h3 style="color: #000000;">Archive:</h3>
 
   {% for post in site.posts%}
     <a href="{{ post.url }}">  {{ post.title }}</a><br>
