--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,11 @@
 {% include header.html %}
 
-<div class="container-fluid">
-<div class="row" style="padding: 0px 0px 20px 0px;">
-  <div class="col-lg-3">
+<div class="container-fluid bg-gray">
+<div class="row" style="padding: 0px 0px 0px 0px;">
+  <div class="col-lg-3 bg-gray" style="box-shadow:50px 50px 20px black;">
     {% include sidebar.html %}
   </div>
-  <div class="col-lg-9" style="padding: 90px 30px 0px 10px;">
+  <div class="col-lg-9 bg-white" style="padding: 90px 30px 0px 30px; border-left: 1px solid #777;">
   	<div class="row" >
     {{ content }}
 	</div>
