--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,12 +1,12 @@
 {% include header-post.html %}
 
-<div class="container-fluid">
+<div class="container-fluid bg-gray">
 <div class="row">
 <div class="col-lg-3" style="padding: 0px;">
     {% include sidebar-post.html %}
   </div>
-  <div class="col-lg-9 bg-white" style="padding: 90px 30px 0px 10px;">
-    <h1 style="color:#000">{{ page.title }}</h1>
+  <div class="col-lg-9 bg-white" style="padding: 90px 30px 0px 30px; border-left: 1px solid #777;">
+    <h2 style="color:#000">{{ page.title }}</h2>
     <p class="muted"><i>{{ page.date | date_to_long_string }}</i></p>
 
     {{ content }}
