--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,10 +2,10 @@
 
 <div class="container-fluid bg-gray">
 <div class="row" style="padding: 0px 0px 0px 0px;">
-  <div class="col-lg-3 bg-gray" style="box-shadow:50px 50px 20px black;">
+  <div class="col-lg-3 bg-gray">
     {% include sidebar.html %}
   </div>
-  <div class="col-lg-9 bg-white" style="padding: 90px 30px 0px 30px; border-left: 1px solid #777;">
+  <div class="col-lg-9 bg-white" style="padding: 90px 30px 0px 30px; border-left: 1px solid #777; box-shadow: inset 3px 0px 3px #888888;">
   	<div class="row" >
     {{ content }}
 	</div>
