--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
   <div class="col-lg-3 bg-gray">
     {% include sidebar.html %}
   </div>
-  <div class="col-lg-9 bg-white" style="padding: 90px 30px 0px 30px; border-left: 1px solid #777; box-shadow: inset 3px 0px 3px #888888;">
+  <div class="col-lg-9 bg-white" style="padding: 90px 30px 0px 30px; border-left: 1px solid #777; box-shadow: inset 5px 3px 3px #BBBBBB;">
   	<div class="row" >
     {{ content }}
 	</div>
