--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
   <div class="col-lg-3 bg-gray">
     {% include sidebar.html %}
   </div>
-  <div class="col-lg-9 bg-white" style="padding: 90px 30px 0px 30px; box-shadow: inset 2px 0px 2px #BBBBBB;">
+  <div class="col-lg-9 bg-white" style="padding: 90px 30px 0px 30px; box-shadow: inset 3px 0px 3px #AAAAAA;">
   	<div class="row" >
     {{ content }}
 	</div>
