--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,7 @@ a:focus {
 
 .navbar-custom.top-nav-collapse .nav.navbar-nav {
     background-color: rgba(0,0,0,0);
+    box-shadow: 0px 3px 3px #888888;
 }
 
 
