--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
   <div class="col-lg-4">
 
   </div>
-  <div class="col-lg-5" style="padding: 20px 50px 40px 0px;">
+  <div class="col-lg-5" style="padding: 20px 50px 40px 0px; box-shadow: 0px -3px 3px #777777;">
 		{% include mailing-list-signup.html %}
   </div>
 {% include footer.html %}
