--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,14 +13,14 @@
 </div>
 </div>
 
-<div class="container-fluid" style="background-color: #000000;">
+<div class="container-fluid" style="background-color: #000000;  box-shadow: 0px -3px 3px #777777;">
   <div class="col-lg-3">
 
   </div>
   <div class="col-lg-4">
 
   </div>
-  <div class="col-lg-5" style="padding: 20px 50px 40px 0px; box-shadow: 0px -3px 3px #777777;">
+  <div class="col-lg-5" style="padding: 20px 50px 40px 0px;">
 		{% include mailing-list-signup.html %}
   </div>
 {% include footer.html %}
