--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
   <div class="col-lg-3 bg-gray">
     {% include sidebar.html %}
   </div>
-  <div class="col-lg-9 bg-white" style="padding: 90px 30px 3px 30px; box-shadow: inset 3px 0px 3px #777777;">
+  <div class="col-lg-9 bg-white" style="padding: 90px 30px 0px 30px; box-shadow: inset 3px 0px 3px #777777;">
   	<div class="row" >
     {{ content }}
 	</div>
@@ -13,7 +13,7 @@
 </div>
 </div>
 
-<div class="container-fluid" style="background-color: #000000;  box-shadow: 0px -3px 3px #777777;">
+<div class="container-fluid" style="background-color: #000000;">
   <div class="col-lg-3">
 
   </div>
