--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,12 +14,17 @@
       <link href="/css/animate.css" rel="stylesheet" />
     <!-- Squad theme CSS -->
     <link href="/css/style.css" rel="stylesheet">
-      <link href="/color/default.css" rel="stylesheet">
+      <link href="/color/default.css" rel="stylesheet">   
 
   </head>
 
-<body id="page-top" data-spy="scroll" data-target=".navbar-custom">
-    <nav class="navbar navbar-custom navbar-fixed-top" role="navigation" style="background: #000; padding: 1px 0;">
+<body id="page-top" data-spy="scroll" data-target=".navbar-custom" style="background: url(/img/Background-Blog.jpg) no-repeat top center; background-size: cover; background-position: 0px -230px;">
+
+<div id="preloader">
+      <div id="load"></div>
+    </div>
+
+    <nav class="navbar navbar-custom navbar-fixed-top" role="navigation" style="background: #000; padding: 1px 0; box-shadow: 0px 3px 3px #000;">
         <div class="container-fluid">
             <div class="navbar-header page-scroll">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
@@ -44,6 +49,6 @@
         <!-- /.container -->
     </nav>
 
-<section class="bg-white">
+
     
 
