--- a/_includes/sidebar-post.html
+++ b/_includes/sidebar-post.html
@@ -1,18 +1,10 @@
 <!DOCTYPE html>
 
-<body>
-<div>
-	<section style="padding: 30px; padding-top: 90px;">
-
-<h3 style="color: #000000; text-align: justify;
-    text-justify: inter-word;">
+<section style="padding: 30px; padding-top: 90px;">
+<h3 style="color: #fff; text-shadow: 2px 2px 2px #444;">
     Archive:</h3>
   {% for post in site.posts %}
-    <a href="{{ post.url }}" style="text-align: justify;
-    text-justify: inter-word;">{{ post.title }}</a><br>
+    <a href="{{ post.url }}">{{ post.title }}</a><br>
   {% endfor %}
 
 </section>
-</div>
-</body>
-</html>
