--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,47 +1,42 @@
 <!DOCTYPE html>
 
-<body>
-<div>
-	<section style="padding: 20px; padding-top: 90px;">
-<h3 style="color: #000000;">
+
+<section style="padding: 30px; padding-top: 90px; ">
+
+<h3 style="color: #fff; text-shadow: 2px 2px 2px #444;">
     What is Get Mastered?
 </h3>
 
 <p style="text-align: justify;
-    text-justify: inter-word;">
-Get Mastered is an instructional blog striving to teach audio engineers
-and musicians alike how to crack open the clandestine art of mastering music through
-interactive tutorials.<br>
-<br>
-Though the blog is focused on mastering, ocassionally I will delve into related topics,
-such as recording, mixing, and songwriting. Indulge me.</p>
+    text-justify: inter-word; color: #eee; font-size: 16px;">
+Get Mastered is an instructional blog for audio engineers
+and musicians to learn how to mastering music through
+interactive tutorials. <br>
 
-<h3 style="color: #000000;">
+<span><a href="">Learn more</a><br><br></p>
+
+<h3 style="color: #fff; text-shadow: 2px 2px 2px #444;">
     Who Am I?</h3>
 
 <p style="text-align: justify;
-    text-justify: inter-word;">
-My name is Keenan, and I'm a recording hobbyist and <span><a href="http://whoisyohannes.com">musician</a></span>. I have always been unsure as to why the mastering profession is so shrouded in mystery, so 
-	this website is my way of clearing the fog, and showing you how to get your own tracks to a
-	professional level.
-	<br>
-	<br>
-	If you think what I'm doing is like super cool, please consider <span><a href="http://whoisyohannes.com">buying me a cup o' joe</a></span>. A lot of work goes into this thing!
+    text-justify: inter-word; color: #eee; font-size: 16px;">
+My name is Keenan. I'm an audio engineer and <span><a href="http://whoisyohannes.com">musician</a></span> who loves mastering, mixing, and recording music.<br><br></p>
 
 
 
-<h3 style="color: #000000;">Archive:</h3>
+<h3 style="color: #fff; text-shadow: 2px 2px 2px #444;">Topics:</h3>
 
-  {% for post in site.posts%}
-    <a href="{{ post.url }}">  {{ post.title }}</a><br>
-  {% endfor %}
 
+<p style="text-align: justify;
+    text-justify: inter-word; color: #eee; font-size: 14px;">
+  <a href="/directory/EQ/">EQ</a> - 
+  <a href="/directory/compression/">Compression</a> - 
+  <a href="/directory/depth/">Depth</a>
+
+
+</p>
 <br>
 
-<h3 style="color: #000000;">Where Can I Go To Keep Learning?</h3>
-
+<h3 style="color: #fff; text-shadow: 2px 2px 2px #444;"> <a href="/archive/index.html">Archive</a></h3>
 
 </section>
-</div>
-</body>
-</html>
