--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,19 +1,15 @@
 {% include header.html %}
 
-<div class="container-fluid bg-gray">
-<div class="row" style="padding: 0px 0px 0px 0px;">
-  <div class="col-lg-3 bg-gray" style="box-shadow:50px 50px 20px black;">
+<div class="row equal" style="padding: 0px; margin: 0px;">
+  <div class="col-lg-3 sidebar" style="padding: 0px; margin: 0px;">
     {% include sidebar.html %}
   </div>
-  <div class="col-lg-9 bg-white" style="padding: 90px 30px 0px 30px; border-left: 1px solid #777;">
-  	<div class="row" >
+  <div class="col-lg-9 bg-white" style="padding-top: 90px; padding-left: 30px; padding-right: 30px; box-shadow: 0px -30px 30px #000;">
     {{ content }}
 	</div>
-  </div>
-</div>
 </div>
 
-<div class="container-fluid" style="background-color: #000000;">
+<div class="container-fluid" style="background-color: #000000; box-shadow: 0px -3px 3px #888888;">
   <div class="col-lg-3">
 
   </div>
@@ -23,6 +19,7 @@
   <div class="col-lg-5" style="padding: 20px 50px 40px 0px;">
 		{% include mailing-list-signup.html %}
   </div>
+
 {% include footer.html %}
 
 
