--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,21 +1,21 @@
 {% include header-post.html %}
 
-<div class="container-fluid bg-gray">
-<div class="row">
-<div class="col-lg-3" style="padding: 0px;">
-    {% include sidebar-post.html %}
+<div class="row equal" style="padding: 0px; margin: 0px;">
+<div class="col-lg-3" style="padding: 0px; margin: 0px;">
+    {% include sidebar.html %}
   </div>
-  <div class="col-lg-9 bg-white" style="padding: 90px 30px 0px 30px; border-left: 1px solid #777;">
-    <h2 style="color:#000">{{ page.title }}</h2>
+  <div class="col-lg-9 bg-white" style="padding-top: 90px; padding-left: 30px; padding-right: 30px; box-shadow: 0px -30px 30px #000;">
+    <h1>{{ page.title }}</h1>
+    <h6> <a href="{{ page.previous.url }}">< {{ page.previous.title }}</a>
+      <br>
+      <br>
+      <a href="{{ page.next.url }}">{{ page.next.title }} ></a> <br></h6>
     <p class="muted"><i>{{ page.date | date_to_long_string }}</i></p>
-
     {{ content }}
     {% include disqus-comments.html %}
   </div>
 </div>
 </div>
-
-
 
 <div class="container-fluid" style="background-color: #000000;">
   <div class="col-lg-3">
@@ -28,4 +28,4 @@
 		{% include mailing-list-signup.html %}
   </div>
 
-{% include footer-post.html %}
+{% include footer.html %}
