--- a/_includes/sidebar-post.html
+++ b/_includes/sidebar-post.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<section style="padding: 30px; padding-top: 90px;">
+<section style="padding: 30px; padding-top: 90px; padding-bottom: 0px; text-align: right;">
 <h3 style="color: #fff; text-shadow: 2px 2px 2px #444;">
     Archive:</h3>
   {% for post in site.posts %}
