--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,34 +1,31 @@
 <!DOCTYPE html>
 
 
-<section style="padding: 30px; padding-top: 90px; ">
+<section style="padding: 30px; padding-top: 90px; padding-bottom: 0px; padding-left: 90px;  text-align: right;">
 
-<h3 style="color: #fff; text-shadow: 2px 2px 2px #444;">
+<h3 style="color: #888;">
     What is Get Mastered?
 </h3>
 
-<p style="text-align: justify;
-    text-justify: inter-word; color: #eee; font-size: 16px;">
+<p style="color: #bbb; font-size: 16px;">
 Get Mastered is an instructional blog for audio engineers
 and musicians to learn how to mastering music through
 interactive tutorials. <br>
 
 <span><a href="">Learn more</a><br><br></p>
 
-<h3 style="color: #fff; text-shadow: 2px 2px 2px #444;">
+<h3 style="color: #888;">
     Who Am I?</h3>
 
-<p style="text-align: justify;
-    text-justify: inter-word; color: #eee; font-size: 16px;">
+<p style="color: #bbb; font-size: 16px;">
 My name is Keenan. I'm an audio engineer and <span><a href="http://whoisyohannes.com">musician</a></span> who loves mastering, mixing, and recording music.<br><br></p>
 
 
 
-<h3 style="color: #fff; text-shadow: 2px 2px 2px #444;">Topics:</h3>
+<h3 style="color: #888;">Topics:</h3>
 
 
-<p style="text-align: justify;
-    text-justify: inter-word; color: #eee; font-size: 14px;">
+<p style="color: #bbb; font-size: 14px;">
   <a href="/directory/EQ/">EQ</a> - 
   <a href="/directory/compression/">Compression</a> - 
   <a href="/directory/depth/">Depth</a>
@@ -37,6 +34,6 @@ My name is Keenan. I'm an audio engineer and <span><a href="http://whoisyohannes
 </p>
 <br>
 
-<h3 style="color: #fff; text-shadow: 2px 2px 2px #444;"> <a href="/archive/index.html">Archive</a></h3>
+<p style="color: #000;"> <a href="/archive/index.html">Archive</a></p>
 
 </section>
