--- a/_includes/header-post.html
+++ b/_includes/header-post.html
@@ -16,60 +16,29 @@
     <link href="/css/style.css" rel="stylesheet">
 	  <link href="/color/default.css" rel="stylesheet">
 
-
-{% if page.categories == "gets-mastered" %}
-
-<style type="text/css">
-a{
-    color: #84E8E1;
-}
-</style>
-
-{% elsif page.categories == "digging-in" %}
-
-<style type="text/css">
-a{
-    color: #FFC395;
-}
-</style>
-
-{% elsif page.categories == "back-to-basics" %}
-
-<style type="text/css">
-a{
-    color: #FFD395;
-}
-</style>
-
-{% elsif page.categories == "big-picture" %}
-
-<style type="text/css">
-a{
-    color: #8EBEE8;
-}
-</style>
-
-{% else %}
-
-{% endif %}
-
   </head>
 
-<body id="page-top" data-spy="scroll" data-target=".navbar-custom" style="background: url(/img/Background-Blog.jpg) no-repeat top center; background-size: cover; background-position: 0px -230px;">
-    <nav class="navbar navbar-custom navbar-fixed-top" role="navigation" style="background: #000; padding: 1px 0; box-shadow: 0px 3px 3px #000;">
+<body id="page-top" data-spy="scroll" data-target=".navbar-custom" class="bg-white">
+
+    <div id="preloader">
+      <div id="load"></div>
+    </div>
+
+    <nav class="navbar navbar-custom navbar-fixed-top" role="navigation" style="background: #aaa; padding: 1px 0;">
         <div class="container-fluid">
             <div class="navbar-header page-scroll">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="/blog" style="padding-left: 33px;">
-                    <h1>Get Mastered</h1><h2> The DIY Mastering Blog</h2>
+                <a class="navbar-brand" href="/blog" style="padding-left: 100px;">
+                    <h2> The DIY Mastering Blog</h2>
+                    <h1>Get Mastered</h1>
                 </a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
-      <ul class="nav navbar-nav" style="padding-right: 30px;">
+      <ul class="nav navbar-nav" style="padding-right: 1045px;">
         <li class="active"><a href="/#intro">Home</a></li>
         <li><a href="/blog">Blog</a></li>
         <li><a href="/#contact">Contact</a></li>
