--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,26 +18,27 @@
 
   </head>
 
-<body id="page-top" data-spy="scroll" data-target=".navbar-custom" style="background: url(/img/Background-Blog.jpg) no-repeat top center; background-size: cover; background-position: 0px -230px;">
+<body id="page-top" data-spy="scroll" data-target=".navbar-custom" class="bg-white">
 
-<div id="preloader">
+    <div id="preloader">
       <div id="load"></div>
     </div>
 
-    <nav class="navbar navbar-custom navbar-fixed-top" role="navigation" style="background: #000; padding: 1px 0; box-shadow: 0px 3px 3px #000;">
+    <nav class="navbar navbar-custom navbar-fixed-top" role="navigation" style="background: #aaa; padding: 1px 0;">
         <div class="container-fluid">
-            <div class="navbar-header page-scroll">
+            <div class="navbar-header page-scroll col-lg-3" style="padding: 0px;">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="/blog" style="padding-left: 33px;">
-                    <h1>Get Mastered</h1><h2> The DIY Mastering Blog</h2>
+                <a class="navbar-brand" href="/blog">
+                    <h2> The DIY Mastering Blog</h2>
+                    <h1>Get Mastered</h1>
                 </a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
-      <ul class="nav navbar-nav" style="padding-right: 30px;">
+            <div class="collapse navbar-collapse navbar-left navbar-main-collapse col-lg-9">
+      <ul class="nav navbar-nav" style="text-align: left;">
         <li class="active"><a href="/#intro">Home</a></li>
         <li><a href="/blog">Blog</a></li>
         <li><a href="/#contact">Contact</a></li>
