--- a/_includes/mailing-list-signup.html
+++ b/_includes/mailing-list-signup.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 
 <div id="mc_embed_signup">
-<div class="row">
+<div class="row-fluid" style="padding: 0px 30px 30px 90px;">
 <form id="contact-form" method="post" action="//getmastered.us10.list-manage.com/subscribe/post?u=bb14eb93467fa9f89bc914f09&amp;id=1d85fcd133" style="padding: 0px 0px;" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    <p style="color: #ffffff; text-align: right;">don't want to miss a post?</p>
-    <h4 style="font-size: 27px; color: #84E8E1; text-align: right;">Sign up for the mailing list:</h4>
+    <p style="color: #bbb; text-align: right;">don't want to miss a post?</p>
+    <h4 style="font-size: 27px; color: #888; text-align: right;">Sign up for the mailing list:</h4>
     <div id="mc_embed_signup_scroll">
                 <div class="container-fluid">
                         <div class="row">
@@ -16,7 +16,7 @@
                     <div class="response" id="mce-success-response" style="display:none"></div>
                 </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                             <br>
-                            <button type="submit" name="subscribe" class="btn btn-skin pull-right bg-dark" value="Subscribe" id="mc-embedded-subscribe">Sign Up</button>
+                            <button type="submit" name="subscribe" class="btn btn-skin pull-right bg-light" value="Subscribe" id="mc-embedded-subscribe">Sign Up</button>
                      </div>
             </div>
         </div>
