--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,23 +2,22 @@
 
 <div class="row equal" style="padding: 0px; margin: 0px;">
   <div class="col-lg-3 sidebar" style="padding: 0px; margin: 0px;">
-    {% include sidebar.html %}
+    <div>
+      {% include sidebar.html %}
+    </div>
+    <div class="row-fluid">
+      {% include mailing-list-signup.html %}
+    </div>
   </div>
-  <div class="col-lg-9 bg-white" style="padding-top: 90px; padding-left: 30px; padding-right: 30px; box-shadow: 0px -30px 30px #000;">
-    {{ content }}
+  <div class="col-lg-9 bg-white" style="padding-top: 90px; padding-left: 10px; padding-right: 90px; border-left-style: none;">
+    <div class="row-fluid">
+      {{ content }}
+    </div>
+    
+
 	</div>
 </div>
 
-<div class="container-fluid" style="background-color: #000000; box-shadow: 0px -3px 3px #888888;">
-  <div class="col-lg-3">
-
-  </div>
-  <div class="col-lg-4">
-
-  </div>
-  <div class="col-lg-5" style="padding: 20px 50px 40px 0px;">
-		{% include mailing-list-signup.html %}
-  </div>
 
 {% include footer.html %}
 
