--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,31 +1,31 @@
-{% include header-post.html %}
+{% include header.html %}
 
 <div class="row equal" style="padding: 0px; margin: 0px;">
-<div class="col-lg-3" style="padding: 0px; margin: 0px;">
-    {% include sidebar.html %}
+  <div class="col-lg-3 sidebar" style="padding: 0px; margin: 0px;">
+    <div>
+      {% include sidebar.html %}
+    </div>
+    <div class="row-fluid">
+      {% include mailing-list-signup.html %}
+    </div>
   </div>
-  <div class="col-lg-9 bg-white" style="padding-top: 90px; padding-left: 30px; padding-right: 30px; box-shadow: 0px -30px 30px #000;">
-    <h1>{{ page.title }}</h1>
-    <h6> <a href="{{ page.previous.url }}">< {{ page.previous.title }}</a>
-      <br>
-      <br>
-      <a href="{{ page.next.url }}">{{ page.next.title }} ></a> <br></h6>
-    <p class="muted"><i>{{ page.date | date_to_long_string }}</i></p>
-    {{ content }}
-    {% include disqus-comments.html %}
+  <div class="col-lg-9 bg-white" style="padding-top: 90px; padding-left: 10px; padding-right: 90px; border-left-style: none;">
+    <div class="row-fluid">
+      <h1 style="color: #000;">{{ page.title }}</h1>
+    </div>
+    <div class="row-fluid">
+      <h5> 
+        <a href="{{ page.previous.url }}">< {{ page.previous.title }}</a>
+        . . .
+        <a href="{{ page.next.url }}">{{ page.next.title }} ></a> <br>
+      </h5>
+    </div>
+    <div class="row-fluid">
+      {{ content }}
+      {% include disqus-comments.html %}
+    </div>
+    </div>
   </div>
 </div>
-</div>
-
-<div class="container-fluid" style="background-color: #000000;">
-  <div class="col-lg-3">
-
-  </div>
-  <div class="col-lg-4">
-
-  </div>
-  <div class="col-lg-5" style="padding: 20px 50px 40px 0px;">
-		{% include mailing-list-signup.html %}
-  </div>
 
 {% include footer.html %}
