--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,21 +24,21 @@
       <div id="load"></div>
     </div>
 
-    <nav class="navbar navbar-custom navbar-fixed-top" role="navigation" style="background: #aaa; padding: 1px 0;">
+    <nav class="navbar navbar-custom navbar-fixed-top" role="navigation" style="background: #000; padding: 1px 0;">
         <div class="container-fluid">
-            <div class="navbar-header page-scroll col-lg-3" style="padding: 0px;">
+            <div class="navbar-left page-scroll col-lg-3" style="padding: 0px;">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="/blog">
-                    <h2> The DIY Mastering Blog</h2>
-                    <h1>Get Mastered</h1>
+                <a href="/blog" align="right">
+                    <!-- <h2> The DIY Mastering Blog</h2> -->
+                    <h4 class="master-color-lighter" style="padding: 15px 40px 5px 0px; margin: 0px;">Get Mastered</h4>
                 </a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-left navbar-main-collapse col-lg-9">
-      <ul class="nav navbar-nav" style="text-align: left;">
+      <ul class="nav navbar-nav" style="text-align: left; padding-left: 0px;">
         <li class="active"><a href="/#intro">Home</a></li>
         <li><a href="/blog">Blog</a></li>
         <li><a href="/#contact">Contact</a></li>
