--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -3,29 +3,29 @@
 
 <section style="padding: 30px; padding-top: 90px; padding-bottom: 0px; padding-left: 90px;  text-align: right;">
 
-<h3 style="color: #888;">
+<h5 style="color: #aaa; display: inline;">
     What is Get Mastered?
-</h3>
+</h5>
 
-<p style="color: #bbb; font-size: 16px;">
+<p style="color: #bbb; font-size: 12px; padding-top: 5px;">
 Get Mastered is an instructional blog for audio engineers
 and musicians to learn how to mastering music through
-interactive tutorials. <br>
+interactive tutorials -- 
 
 <span><a href="">Learn more</a><br><br></p>
 
-<h3 style="color: #888;">
-    Who Am I?</h3>
+<h5 style="color: #aaa; display: inline;">
+    Who Am I?</h5>
 
-<p style="color: #bbb; font-size: 16px;">
+<p style="color: #bbb; font-size: 12px; padding-top: 5px;">
 My name is Keenan. I'm an audio engineer and <span><a href="http://whoisyohannes.com">musician</a></span> who loves mastering, mixing, and recording music.<br><br></p>
 
 
 
-<h3 style="color: #888;">Topics:</h3>
+<h5 style="color: #aaa; display: inline;">Topics:</h5>
 
 
-<p style="color: #bbb; font-size: 14px;">
+<p style="color: #bbb; font-size: 12px; padding-top: 5px;">
   <a href="/directory/EQ/">EQ</a> - 
   <a href="/directory/compression/">Compression</a> - 
   <a href="/directory/depth/">Depth</a>
@@ -34,6 +34,6 @@ My name is Keenan. I'm an audio engineer and <span><a href="http://whoisyohannes
 </p>
 <br>
 
-<p style="color: #000;"> <a href="/archive/index.html">Archive</a></p>
+<p style="color: #000;"> <a style="font-size: 14px;" href="/archive/index.html">ARCHIVE</a></p>
 
 </section>
