--- a/_includes/mailing-list-signup.html
+++ b/_includes/mailing-list-signup.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 
 <div id="mc_embed_signup">
-<div class="row-fluid" style="padding: 0px 30px 30px 90px;">
+<div class="row-fluid" style="margin: 0px 30px 30px 0px; padding: 5px 20px 5px 20px; background-color: #000;
+box-shadow: 3px 3px 10px; #ccc;">
 <form id="contact-form" method="post" action="//getmastered.us10.list-manage.com/subscribe/post?u=bb14eb93467fa9f89bc914f09&amp;id=1d85fcd133" style="padding: 0px 0px;" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    <p style="color: #bbb; text-align: right;">don't want to miss a post?</p>
-    <h4 style="font-size: 27px; color: #888; text-align: right;">Sign up for the mailing list:</h4>
-    <div id="mc_embed_signup_scroll">
+    <p style="font-size: 14px; color: #bbb; text-align: right; margin: 0px; padding: 5px;">don't want to miss a post?</p>
+    <h4 class="master-color-lighter" style="font-size: 16px; text-align: right; margin: 0px; padding: 5px;">Sign up for the mailing list:</h4>
+    <div id="mc_embed_signup_scroll" style="padding: 10px 0px;">
                 <div class="container-fluid">
                         <div class="row">
                             <div class="form-group">
@@ -15,8 +16,8 @@
                     <div class="response" id="mce-error-response" style="display:none"></div>
                     <div class="response" id="mce-success-response" style="display:none"></div>
                 </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                            <br>
-                            <button type="submit" name="subscribe" class="btn btn-skin pull-right bg-light" value="Subscribe" id="mc-embedded-subscribe">Sign Up</button>
+                            
+                            <button type="submit" name="subscribe" class="btn btn-skin pull-right bg-dark" value="Subscribe" id="mc-embedded-subscribe" style="padding: 3px; margin: 0px; font-size: 12px;">Sign Up</button>
                      </div>
             </div>
         </div>
