--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,11 +6,13 @@
       {% include sidebar.html %}
     </div>
     <div class="row-fluid">
+      <div data-spy="affix" data-offset-top="0">
       {% include mailing-list-signup.html %}
+    </div>
     </div>
   </div>
   <div class="col-lg-9 bg-white" style="padding-top: 90px; padding-left: 10px; padding-right: 90px; border-left-style: none;">
-    <div class="row-fluid">
+    <div class="row-fluid" style="color: #000;">
       {{ content }}
     </div>
     
