--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,27 +2,37 @@
 
 <div class="row equal" style="padding: 0px; margin: 0px;">
   <div class="col-lg-3 sidebar" style="padding: 0px; margin: 0px;">
-    <div>
+    <div class="row-fluid hidden-md hidden-sm hidden-xs">
       {% include sidebar.html %}
     </div>
     <div class="row-fluid">
+      <div data-spy="affix" data-offset-top="0">
       {% include mailing-list-signup.html %}
+      </div>
     </div>
   </div>
   <div class="col-lg-9 bg-white" style="padding-top: 90px; padding-left: 10px; padding-right: 90px; border-left-style: none;">
     <div class="row-fluid">
-      <h1 style="color: #000;">{{ page.title }}</h1>
+      
     </div>
     <div class="row-fluid">
-      <h5> 
-        <a href="{{ page.previous.url }}">< {{ page.previous.title }}</a>
-        . . .
-        <a href="{{ page.next.url }}">{{ page.next.title }} ></a> <br>
+      <h5 style="color: #ccc;"> 
+        <a class="master-color-light" href="{{ page.previous.url }}">< {{ page.previous.title }}</a>
+        //
+        <a class="master-color-light" href="{{ page.next.url }}">{{ page.next.title }} ></a> <br>
       </h5>
+      <h1 class="master-color-light" style="font-size: 80px;">{{ page.title }}</h1>
     </div>
+    <div class="row-fluid">
+      <iframe width="90%" height="200" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/186277303&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+    </div>
+    <br>
     <div class="row-fluid">
       {{ content }}
       {% include disqus-comments.html %}
+    </div>
+    <div class="row-fluid hidden-lg hidden-xl">
+      {% include mailing-list-signup.html %}
     </div>
     </div>
   </div>
