--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,10 +30,16 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     <i class="fa fa-bars"></i>
                 </button>
-                <a href="/blog" align="right">
+                <a class="hidden-xs hidden-sm hidden-md" href="/blog" align="right">
                     <!-- <h2> The DIY Mastering Blog</h2> -->
-                    <h4 class="master-color-lighter" style="padding: 15px 40px 5px 0px; margin: 0px;">Get Mastered</h4>
+                    <h4 class="master-color-lighter" style="padding: 15px 20px 5px 0px; margin: 0px;">Get Mastered</h4>
                 </a>
+
+                <a class="hidden-lg hidden-xl" href="/blog" align="left">
+                    <!-- <h2> The DIY Mastering Blog</h2> -->
+                    <h4 class="master-color-lighter" style="padding: 15px 20px 5px 0px; margin: 0px;">Get Mastered</h4>
+                </a>
+
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -49,6 +55,8 @@
         </div>
         <!-- /.container -->
     </nav>
+    <div style="padding: 40px; margin: 0px;">
+    </div>
 
 
     
