--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,12 @@
 
+    <div class="row equal bg-gray" style="padding: 0px 0px 20px 0px; margin: 0px;">
+        <div class="col-lg-3 bg-gray sidebar hidden-md hidden-sm hidden-xs" style="padding: 0px; margin: 0px;">
+        </div>
+        <div class="col-lg-9 bg-gray" style="padding-top: 40px; padding-left: 20px; padding-right: 20px;">
+            <p style="color: #999;"><b>Get Mastered</b> is a free site, with no ads. And it's a whole lot of work. 
+                <br>
+                If you think a friend could benefit from the post you're reading, please <b>share it</b> with a button on the sidebar!</p>
+        </div>
 
     </div>
 
@@ -22,6 +30,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-MSTFPS');</script>
 <!-- End Google Tag Manager -->
+
+<!-- Facebook bull -->
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.3";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 
 </html>
 
