--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,39 +1,38 @@
 <!DOCTYPE html>
 
 
-<section style="padding: 30px; padding-top: 90px; padding-bottom: 0px; padding-left: 90px;  text-align: right;">
+<section style="padding: 0px 15px 0px 15px; text-align: right;">
 
-<h5 style="color: #aaa; display: inline;">
+<h4 style="color: #aaa; display: inline;">
     What is Get Mastered?
-</h5>
+</h4>
 
 <p style="color: #bbb; font-size: 12px; padding-top: 5px;">
 Get Mastered is an instructional blog for audio engineers
-and musicians to learn how to mastering music through
+and musicians to learn how to master music through
 interactive tutorials -- 
 
-<span><a href="">Learn more</a><br><br></p>
+<span><a href="/about/What-Is-Get-Mastered/" style="color: #aaa;">Learn more</a><br><br></p>
 
-<h5 style="color: #aaa; display: inline;">
-    Who Am I?</h5>
-
-<p style="color: #bbb; font-size: 12px; padding-top: 5px;">
-My name is Keenan. I'm an audio engineer and <span><a href="http://whoisyohannes.com">musician</a></span> who loves mastering, mixing, and recording music.<br><br></p>
-
-
-
-<h5 style="color: #aaa; display: inline;">Topics:</h5>
-
+<h4 style="color: #aaa; display: inline;">
+    Who Am I?</h4>
 
 <p style="color: #bbb; font-size: 12px; padding-top: 5px;">
-  <a href="/directory/EQ/">EQ</a> - 
-  <a href="/directory/compression/">Compression</a> - 
-  <a href="/directory/depth/">Depth</a>
+My name is Keenan. I'm an audio engineer and <span><a href="http://whoisyohannes.com" style="color: #aaa;">musician</a></span> who loves mastering, mixing, and recording music.<br><br></p>
+
+
+
+<h4 style="color: #aaa; display: inline;">Topics:</h4>
+
+
+<p style="color: #bbb; font-size: 12px; padding-top: 5px;">
+  <a href="/directory/EQ/" style="color: #aaa;">EQ</a> - 
+  <a href="/directory/compression/" style="color: #aaa;">Compression</a> - 
+  <a href="/directory/depth/" style="color: #aaa;">Depth</a>
 
 
 </p>
-<br>
 
-<p style="color: #000;"> <a style="font-size: 14px;" href="/archive/index.html">ARCHIVE</a></p>
+<p style="color: #000;"> <a style="font-size: 12px; color:#aaa;" href="/archive/index.html">Archive</a></p>
 
 </section>
