--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,22 +1,26 @@
 {% include header.html %}
 
 <div class="row equal" style="padding: 0px; margin: 0px;">
-  <div class="col-lg-3 sidebar" style="padding: 0px; margin: 0px;">
+  <div class="col-lg-3 sidebar hidden-md hidden-sm hidden-xs" style="padding: 0px; margin: 0px;">
+    <div data-spy="affix" data-offset-top="0">
     <div>
       {% include sidebar.html %}
     </div>
     <div class="row-fluid">
-      <div data-spy="affix" data-offset-top="0">
       {% include mailing-list-signup.html %}
+    </div>
+    <div class="row-fluid">
+      {% include social-media.html %}
     </div>
     </div>
   </div>
-  <div class="col-lg-9 bg-white" style="padding-top: 90px; padding-left: 10px; padding-right: 90px; border-left-style: none;">
+  <div class="col-lg-9 bg-white" style="padding-top: 0px; padding-left: 20px; padding-right: 20px;">
     <div class="row-fluid" style="color: #000;">
       {{ content }}
     </div>
-    
-
+    <div class="row-fluid hidden-lg hidden-xl">
+      {% include mailing-list-signup.html %}
+    </div>
 	</div>
 </div>
 
