--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,6 +8,8 @@
     <meta name="description" content="{{ site.description }}">
     <meta name="author" content="Keenan Hye">
 
+    <link rel="shortcut icon" href="http://i1045.photobucket.com/albums/b459/keenanhi/Flavicon_zps31q8d1uz.png" />
+
     <!-- Bootstrap Core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 
