subtitles and arrows

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -22,7 +22,7 @@ My name is Keenan. I'm a <span><a href="http://whoisyohannes.com" style="color: 
 <h4 style="color: #777; display: inline;">
     Can't Wait?
 </h4>
-<p> <a style="font-size: 15px; color:#56C29F;" href="/mastering-services/">Get Mastered by me, right now!</a></p>
+<p> <a style="font-size: 15px;" href="/mastering-services/">Get Mastered by me, right now!</a></p>
 
 <br>
 
