--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,9 +15,17 @@
     <div class="row-fluid bg-white hidden-md hidden-sm hidden-xs" style="padding: 90px 30px 0px 0px; position: fixed; width: 100%;">
       <!-- <div data-spy="affix" data-offset-top="0" style="padding: 0px 30px 0px 0px;"> -->
       <h4 style="color: #ccc;"> 
+        {% if page.previous.title != null %}
         <a class="master-color-light" href="{{ page.previous.url }}">< {{ page.previous.title }}</a>
+        {% endif %}
+        {% if page.previous.title != null %}
+        {% if page.next.title != null %}
         //
+        {% endif %}
+        {% endif %}
+        {% if page.next.title != null %}
         <a class="master-color-light" href="{{ page.next.url }}">{{ page.next.title }} ></a> 
+        {% endif %}
       </h4>
     </div>
 
@@ -39,6 +47,7 @@
     <!-- <div class="wow fadeInUp" data-wow-delay="0.8s"> -->
     
     <div class="row-fluid" style="padding: 80px 20px 10px 40px;">
+      <h3 class="text-gray">{{ page.subtitle }}</h3>
       <h1 class="{{ page.color }} hidden-lg hidden-xl" style="font-size: 10vw;">{{ page.title }}</h1>
       <h1 class="{{ page.color }} hidden-md hidden-sm hidden-xs" style="font-size: 7vw;">{{ page.title }}</h1>
     <!-- </div> -->
