search and revamp

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -51,12 +51,12 @@
       <ul class="nav navbar-nav" style="text-align: left; padding-left: 0px;">
         <li class="active"><a href="/">Home</a></li>
         <li><a href="/free-master">Free Master</a></li>
-        <li><a href="/free-master/#contact">Contact</a></li>
         <li><a href="/mastering-services/">Mastering Services</a></li>
-        <li><a href="http://whoisyohannes.com">My Music</a></li>
+        <li><a href="/archive/">Post Archive</a></li>
       </ul>
             </div>
             <!-- /.navbar-collapse -->
+        
         </div>
         <!-- /.container -->
     </nav>
