--- a/_includes/mailing-list-signup.html
+++ b/_includes/mailing-list-signup.html
@@ -1,12 +1,13 @@
+
 <!DOCTYPE html>
 
 <div id="mc_embed_signup">
-<div class="row-fluid" style="margin: 0px 10px 30px 0px; padding: 0px;">
+<div class="row-fluid" style="margin: 0px 200px 30px 200px; padding: 0px;">
 <form id="contact-form" method="post" action="//getmastered.us10.list-manage.com/subscribe/post?u=bb14eb93467fa9f89bc914f09&amp;id=1d85fcd133" style="padding: 0px 0px;" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    <h4 style="color: #777; text-align: right; margin: 0px; padding: 5px;">Want 10% off your first job?</h4>
+    <h4 style="color: #777; text-align: center; margin: 0px; padding: 5px;">Want 10% off your first job?</h4>
   <!--   <p style="font-size: 14px; color: #777; text-align: right; margin: 0px; padding: 5px;">Sign up for the mailing list and get exclusive discounts:</p> -->
     
-    <div id="mc_embed_signup_scroll" style="padding: 10px 0px 10px 30px;">
+    <div id="mc_embed_signup_scroll" style="padding: 10px 0px 10px 0px;">
                 <div class="container-fluid">
                         <div class="row">
                             <div class="form-group">
@@ -17,7 +18,7 @@
                     <div class="response" id="mce-success-response" style="display:none"></div>
                 </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                             
-                            <button type="submit" name="subscribe" class="btn btn-skin pull-right bg-dark" value="Subscribe" id="mc-embedded-subscribe">Submit</button>
+                            <button type="submit" name="subscribe" class="btn btn-skin bg-dark" value="Subscribe" id="mc-embedded-subscribe">Submit</button>
                      </div>
             </div>
         </div>
