rates page redesign

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -36,12 +36,12 @@
                 </button>
                 <a class="hidden-xs hidden-sm hidden-md" href="/" align="right">
                     <!-- <h2> The DIY Mastering Blog</h2> -->
-                    <h4 class="master-color-light" style="padding: 15px 20px 5px 0px; margin: 0px;">Get Mastered</h4>
+                    <h4 class="master-color-light" style="padding: 15px 20px 5px 0px; margin: 0px; text-transform: uppercase;">Get Mastered</h4>
                 </a>
 
                 <a class="hidden-lg hidden-xl" href="/" align="left">
                     <!-- <h2> The DIY Mastering Blog</h2> -->
-                    <h4 class="master-color-light" style="padding: 15px 20px 5px 0px; margin: 0px;">Get Mastered</h4>
+                    <h4 class="master-color-light" style="padding: 15px 20px 5px 0px; margin: 0px; text-transform: uppercase;">Get Mastered</h4>
                 </a>
 
             </div>
