--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -24,7 +24,7 @@ My name is Keenan and I've been mastering, mixing, and recording music for six y
 <h4 style="color: #777; display: inline; text-transform: uppercase;">
     Done mixing?
 </h4>
-<p> <a style="font-size: 15px;" href="/mastering-services/">Get Mastered, right now</a></p>
+<p> <a style="font-size: 15px;" href="/">Get Mastered, right now</a></p>
 
 <br>
 
