open links in new tabs

--- a/_includes/footer-splash.html
+++ b/_includes/footer-splash.html
@@ -12,11 +12,11 @@
 
 <br>
 <br>
-<a href="http://www.facebook.com/getmastered" style="padding: 0% 1%;"> <img src="/img/Button-FB.png" width="60px" height="60px"> </a>
+<a target="_blank" href="http://www.facebook.com/getmastered" style="padding: 0% 1%;"> <img src="/img/Button-FB.png" width="60px" height="60px"> </a>
 
-<a href="http://www.soundcloud.com/getmastered" style="padding: 0% 1%;"> <img src="/img/Button-SC.png" width="60px" height="60px"> </a>
+<a target="_blank" href="http://www.soundcloud.com/getmastered" style="padding: 0% 1%;"> <img src="/img/Button-SC.png" width="60px" height="60px"> </a>
 
-<a href="http://www.twitter.com/getmastered" style="padding: 0% 1%;"> <img src="/img/Button-Twit.png" width="60px" height="60px"> </a>
+<a target="_blank" href="http://www.twitter.com/getmastered" style="padding: 0% 1%;"> <img src="/img/Button-Twit.png" width="60px" height="60px"> </a>
 
 <br>
 <br>
